# kovaaks-obs-plugin

./: .gitignore  CMakeLists.txt  README.md  kovaaks_killstats.html  kovaaks_widget.html
src/: kovaaks_plugin.cpp
